samples/_failures_safe/1761081985_1ab9fb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7739e418.c: In function ‘main’:
./samples/SAFE/__tmp_7739e418.c:159:5: error: expected declaration or statement at end of input
  159 |     }
      |     ^
